# cc-assistant

./: CLAUDE.md
paper-researcher/: .gitignore  README.md  pyproject.toml
paper-researcher/.claude-plugin/: plugin.json
paper-researcher/agents/: paper-summarizer.md
paper-researcher/commands/: paper-annotate.md  paper-blog.md  paper-citations.md  paper-collect.md  paper-digest.md  paper-export.md  paper-import.md  paper-search.md  paper-share.md  paper-summarize.md
paper-researcher/skills/paper-blogger/: SKILL.md
paper-researcher/skills/paper-blogger/scripts/: save_blog_post.py
paper-researcher/skills/paper-citation/: SKILL.md
paper-researcher/skills/paper-citation/scripts/: build_graph.py  fetch_citations.py
paper-researcher/skills/paper-collaborator/: SKILL.md
paper-researcher/skills/paper-collaborator/scripts/: import_collection.py  (+3 more)
paper-researcher/skills/paper-collector/: SKILL.md
paper-researcher/skills/paper-digest/: SKILL.md
paper-researcher/skills/paper-exporter/: SKILL.md
paper-researcher/skills/paper-searcher/: SKILL.md
paper-researcher/skills/paper-summarizer/: SKILL.md
paper-researcher/tests/: __init__.py  conftest.py  test_build_digest.py  test_build_graph.py  test_export_papers.py  test_fetch_arxiv.py  test_fetch_citations.py  test_import_collection.py  test_list_annotations.py  test_save_annotation.py  test_save_blog_post.py  test_search_index.py  test_share_collection.py  test_store_paper.py  test_update_summary_status.py
paper-researcher/tests/fixtures/: arxiv_response.xml  sample_summary.md  semantic_scholar_response.json
(+39 files in other folders)
