[project]
name = "paper-researcher"
version = "1.0.0"
description = "AI-powered research paper collection, summarization, and search pipeline."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
    "types-requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
    "types-requests>=2.28.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
